--- a/style.css
+++ b/style.css
@@ -1,118 +1,63 @@
 body {
-    background: lightgray;
+  background-color: lightskyblue;
+
 }
 
 h1 {
-    color: green;
-    background-color: red;
+    color: navy;
+    font-family:'Courier New', Courier, monospace;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
+    text-decoration: overline underline;
+}
+
+h2 {
+    color: navy;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 13px;
+    text-decoration: underline;
 }
 
 h3 {
-    color: blue;
-    background-color: yellow;
+    color: navy;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 35px;
     text-align: center;
+    text-decoration: underline;
+}
+
+h4 {
+    color: navy;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 30px;
+    text-align: center;
+    text-decoration: underline;
 }
 
 p {
-    color: purple;
-    background-color: black;
+    color: whitesmoke;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 20px;
+
 }
 
-.example {
-    color: blueviolet;
-    text-align: left;
-    font-size: 18px;
+img {
+    align-items: center;
 }
 
-.example2 {
-    background-color: lightcoral;
-    text-align: right;
-    font-size: 20px;
-}
 
-#container {
-    font-size: 33px;
-    color: aqua;
-    text-align: right;
-}
 
-#container2 {
-    font-size: 33px;
-    text-align: left;
-    color: brown;
+a:hover {
+    color:red;
 }
-
-div.pseudo:hover {
-    color: firebrick;
-    background-color: lightblue;
-    text-align: center;
-}
-
-p.sample {
-    font-size: 42px;
-    color: fuchsia;
-    background-color: yellowgreen;
-}
-
-.box {
-    background-color: aliceblue;
-    height: 50px;
-    width: 333px;
-    border: 20px solid purple;
-    padding: 25px;
-    margin: 50px;
-}
-
-.box2 {
-    width: 99px;
-    height: 99px;
-    background-color: royalblue;
-    position: relative;
-    animation-name: example;
-    animation-duration: 2s;
-    animation-delay: 2s;
-}
-
-@keyframes example {
-    0% {background-color: red; left:0px; top:0px;}
-    25% {background-color: orangered; left:200px; top:0px;}
-    50% {background-color: lightpink; left:200px; top:200px;}
-    75% {background-color: green; left:0px; top:200px;}
-    100% {background-color: blue; left:0px; top:0px;}
-}
-
-div.sticky {
-    position: sticky;
-    top: 0;
-    padding: 3px;
-    background-color: lightsalmon;
-    border: 5px solid gray;
-}
-
-div.position {
-    position: absolute;
-    left: 50px;
-    right: 400px;
-    top: 100px;
-}
-
-section a {
-    background-color: orange;
-}
-
-.container a {
-    color:chartreuse;
-}
-
-.container3> a {
-    color:darkgoldenrod;
-    background-color:black;
-}
-
-.container3> p {
-    color:darkslategrey;
-    background-color: lightskyblue;
-}
+nav {
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    color: whitesmoke;
+    list-style-type: none;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 23px;
+    
+    background: linear-gradient(to top, lightskyblue, whitesmoke);
+  }
